--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>じゃんけんアプリ</title>
 
     <script src="./app.js"></script>
-    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./design.css">
 </head>
 <body>
     <h1 id="title">じゃんけんアプリ</h1>
